<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="true"
    android:background="@drawable/login_background"
    android:clipChildren="true"
    tools:context=".StartActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:contentDescription="@string/logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo" />


            <EditText

                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/userName"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />


            <EditText

                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fgpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="right"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />


            <Button
                android:id="@+id/btlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="21sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView

                    android:id="@+id/signuptextviwe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>



        </LinearLayout>



    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>










