<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:addStatesFromChildren="true"
    android:background="@drawable/login_background"
    android:clipChildren="true"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:orientation="vertical">


                    <EditText

                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="6dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textSize="16sp" />

                    <EditText

                        android:id="@+id/userFaculty"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="6dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/faculty"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textSize="16sp"
                        tools:ignore="DuplicateIds" />


                    <EditText

                        android:id="@+id/userbatch"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginBottom="6dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/batch"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textSize="16sp" />

                    <EditText

                        android:id="@+id/userDegree"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:background="@color/white"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/degree"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="#757575"
                        android:textSize="16sp" />


                </LinearLayout>


            <Button

                android:id="@+id/btnext"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_background"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp"
                android:gravity="center"
                android:text="@string/by_signing_up_you_agree_to_our_terms_data_policy_and_cookies_policy"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>